# vu-launcher

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  testSetup.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
FrontendTests/: AppSidebar.spec.tsx  LoaderComponent.spec.ts  LoaderComponent.spec.tsx
FrontendTests/mocks/: loadout.json
src/: App.css  App.tsx  AppLayout.tsx  api.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mods.rs  reg_functions.rs  servers.rs  speed_calc.rs  test.rs  web.rs
src-tauri/src/loadouts/: launch_arg_selector.rs  loadout_modification.rs  loadout_structs.rs  loadout_txt_handlers.rs  mod.rs
src-tauri/src/mods/: mod.rs
src-tauri/src/preferences/: mod.rs  preference_structs.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/servers/: mod.rs
src-tauri/src/web/: mod.rs
src/components/: AnimatedLayout.tsx  AnimatedOutlet.tsx  AppSidebar.tsx  InstallVU.tsx  LoaderComponent.spec.ts  LoaderComponent.tsx  Menu.tsx  PageTransition.tsx  TooltipWrapper.tsx  Updating.tsx  app-card.tsx  app-select-user.tsx  app-sidebar.tsx  app-user-preference.tsx  credentials-form.tsx  credentials-sheet.tsx  vu-version-info.tsx
src/components/Onboarding/: InstallVuDevDialog.tsx  Onboarding.tsx
src/components/ui/: button.tsx  progress.tsx  sheet.tsx  sidebar.tsx  switch.tsx
src/config/: config.ts
src/hooks/: block-context-menu.tsx
src/i18n/: config.ts
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/zh/: translation.json
src/routes/: Home.tsx  LauncherSettings.tsx  Mods.tsx  PlayerSettings.tsx  Servers.tsx  Settings.tsx
src/routes/Home/: Home.tsx
src/routes/Home/components/: VUAccountSelect.tsx  vu-version-info.tsx
src/routes/Mods/: Mods.tsx
src/routes/Mods/components/: DiscoverMods.tsx
src/routes/Onboarding/: InstallVuDevDialog.tsx  Onboarding.tsx
src/routes/Onboarding/components/: ActivateStep.tsx  CredentialsStep.tsx  InstallStep.tsx  IntroScreen.tsx  OnboardingCredentialsSheet.tsx  OnboardingLoader.tsx
src/routes/Servers/: Servers.tsx  defaultServerConfig.ts
src/routes/Servers/components/: ChooseAccountForm.tsx  DeleteLoadoutDialog.tsx  EditServerSheet.tsx  FileUpload.tsx  FirstTimeSetup.tsx  LoadoutBrowser.tsx  ServerGuidForm.tsx  ServerKeyUpload.tsx  ServerLoadoutPreview.tsx  server-form.tsx  server-sheet.tsx
src/routes/Settings/: Settings.tsx
src/routes/Settings/components/: AutomaticallyUpdateToggle.tsx  CheckForUpdatesToggle.tsx  CopyProdToDev.tsx  InstallVuFromSettings.tsx  LanguageSelector.tsx  LocalServerGuidForm.tsx  MultiAccountToggle.tsx
src/translations/: Chinese.ts  English.ts  German.ts  manual-translation-helper.ts
webdriver/selenium/test/: testEntry.spec.ts
(+121 files in other folders)
