[package]
name = "vu-launcher"
version = "0.4.8"
description = "Trying to make VU more convenient."
authors = ["DesertShadow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vu_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-decorum = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
walkdir = "2.5.0"
winreg = "0.55"
dirs-next = "2.0.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
zip = "5.1.1"
tokio = { version = "1.42.0", features = ["macros"] }
futures-util = "0.3.31"
dircpy = "0.3.19"
keyring = { version = "3.6.2", features = ["windows-native"] }
directories = "6.0.0"
test-env-helpers = "0.2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
